[gd_scene load_steps=22 format=3 uid="uid://u2mjif17kpa3"]

[ext_resource type="Texture2D" uid="uid://csdkovwxh7bbq" path="res://characters/slime/black_silence_body.png" id="1_0xphj"]
[ext_resource type="Script" path="res://enemies/bsfight/roland_bygone.gd" id="1_aifya"]
[ext_resource type="Texture2D" uid="uid://btbxea1f3vwot" path="res://characters/slime/slime_body_hurt.png" id="2_bxoe3"]
[ext_resource type="Texture2D" uid="uid://bthmfhrwwalax" path="res://assets/Blacksilence_weapons/roland_crystal.png" id="3_01u52"]
[ext_resource type="Texture2D" uid="uid://cdbv0k31ody0y" path="res://assets/Blacksilence_weapons/roland_atelier.png" id="4_n3fq1"]
[ext_resource type="Texture2D" uid="uid://dmtyt3qiw3hjf" path="res://assets/Blacksilence_weapons/roland_durandal.png" id="5_qm70v"]
[ext_resource type="Texture2D" uid="uid://duv83exbdkl22" path="res://assets/Blacksilence_weapons/roland_ranga2.png" id="6_sofnf"]
[ext_resource type="Texture2D" uid="uid://b3kmn26l66mvh" path="res://assets/Blacksilence_weapons/roland_ranga.png" id="7_qdxni"]
[ext_resource type="Texture2D" uid="uid://e67xjk6uaumf" path="res://assets/Blacksilence_weapons/roland_wheels.png" id="8_drwfg"]
[ext_resource type="Script" path="res://enemies/black_silencedmg.gd" id="9_0v6lr"]
[ext_resource type="AudioStream" uid="uid://bipl5qdqbhmpg" path="res://audio/explosion.mp3" id="10_nqyyq"]
[ext_resource type="AudioStream" uid="uid://bg55vd1i0im00" path="res://audio/Gunshot.mp3" id="11_kko36"]
[ext_resource type="AudioStream" uid="uid://bxg0bn7n86axk" path="res://audio/roland_click.mp3" id="12_fb5g8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vixkg"]
radius = 51.0

[sub_resource type="Animation" id="Animation_v1xnt"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/SlimeBody/SlimeBodyHurt:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bjkcu"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Anchor/SlimeBody/SlimeBodyHurt:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kaob5"]
_data = {
"RESET": SubResource("Animation_v1xnt"),
"hurt": SubResource("Animation_bjkcu")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f0t30"]
size = Vector2(288.75, 208.177)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kri71"]
size = Vector2(23.8571, 22.2857)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qfon5"]
bg_color = Color(0.541176, 0.529412, 0.592157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow3c5"]
bg_color = Color(0.142248, 0.717943, 0.275099, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="roland_bygone" type="CharacterBody2D"]
collision_layer = 2
platform_floor_layers = 0
script = ExtResource("1_aifya")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -29)
shape = SubResource("CircleShape2D_vixkg")

[node name="anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_kaob5")
}

[node name="Anchor" type="Marker2D" parent="."]

[node name="SlimeBody" type="Sprite2D" parent="Anchor"]
texture = ExtResource("1_0xphj")
offset = Vector2(0, -36)

[node name="SlimeBodyHurt" type="Sprite2D" parent="Anchor/SlimeBody"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_bxoe3")
offset = Vector2(0, -36)

[node name="weapons" type="Node2D" parent="."]

[node name="RolandCrystal" type="Sprite2D" parent="weapons"]
visible = false
position = Vector2(23, -33)
texture = ExtResource("3_01u52")

[node name="RolandCrystal2" type="Sprite2D" parent="weapons/RolandCrystal"]
position = Vector2(-46, 0)
texture = ExtResource("3_01u52")
flip_h = true

[node name="aim" type="Marker2D" parent="weapons"]
unique_name_in_owner = true
position = Vector2(0, -33)

[node name="RolandAtelier" type="Sprite2D" parent="weapons/aim"]
visible = false
position = Vector2(40, 0)
texture = ExtResource("4_n3fq1")

[node name="RolandDurandal" type="Sprite2D" parent="weapons/aim"]
visible = false
position = Vector2(68, 0)
texture = ExtResource("5_qm70v")

[node name="hitbox" type="Area2D" parent="weapons/aim/RolandDurandal"]
collision_layer = 0
collision_mask = 12
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapons/aim/RolandDurandal/hitbox"]
position = Vector2(175.825, 2.75543)
rotation = 0.000852231
shape = SubResource("RectangleShape2D_f0t30")

[node name="RolandRanga2" type="Sprite2D" parent="weapons/aim"]
visible = false
position = Vector2(0, 31)
texture = ExtResource("6_sofnf")

[node name="RolandRanga" type="Sprite2D" parent="weapons/aim"]
visible = false
position = Vector2(6, -4)
texture = ExtResource("7_qdxni")

[node name="RolandWheels" type="Sprite2D" parent="weapons/aim"]
visible = false
position = Vector2(100, 0)
texture = ExtResource("8_drwfg")

[node name="weapon" type="Marker2D" parent="weapons/aim"]
position = Vector2(59, 0)
script = ExtResource("9_0v6lr")

[node name="attack_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 8
collision_priority = 2.0
monitorable = false

[node name="attack" type="CollisionShape2D" parent="attack_area"]
position = Vector2(4.76837e-07, -29)
scale = Vector2(7, 7)
shape = SubResource("RectangleShape2D_kri71")

[node name="reload" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true
autostart = true

[node name="wheels" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_nqyyq")

[node name="atellier" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_kko36")

[node name="click" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("12_fb5g8")
volume_db = 6.667

[node name="hpbar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -73.0
offset_top = -116.0
offset_right = 74.0
offset_bottom = -95.0
theme_override_styles/background = SubResource("StyleBoxFlat_qfon5")
theme_override_styles/fill = SubResource("StyleBoxFlat_ow3c5")
value = 100.0
allow_greater = true
show_percentage = false

[node name="ahp" type="Label" parent="hpbar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"

[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
